add tooltip and fix settings label
